css/styles.css
/* ... */
.contacts .item {
  display: flex;
}
/* style for mailto */
.mailto,
.telephone {
  display: flex;
  align-items: center;
}

/* hero section */
.hero {
  color: var(--main-color);
  background-color: var(--hero-background-color);

  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
    url('../images/hero.jpg');
  background-repeat: no-repeat;
  background-position: center;
  background-size: auto;

  padding-top: 200px;
  padding-bottom: 200px;
}
.hero-header {
  display: block;
  margin-top: inherit;
  margin-bottom: 30px;

  font-size: 44px;
  font-weight: var(--font-size-black);
  text-align: center;
  letter-spacing: 0.06em;
  line-height: 1.363;
  text-transform: uppercase;
}
.hero .item-header {
  display: flex;
  justify-content: center;
  margin-left: auto;
  margin-right: auto;
  width: 696px;
}
.hero .item-button {
  display: flex;
  justify-content: center;
}
.hero .btn {
  border-style: none;
  border-radius: var(--button-border-radius);
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 32px;
  padding-right: 32px;

  color: var(--main-color);
  background-color: var(--buttons-color);

  font-family: inherit;
  font-size: 16px;
  font-weight: var(--font-size-bold);
  text-align: center;
  letter-spacing: 0.06em;
  line-height: 1.87;
}

/* advantages section */
.advantages-header {
  display: none;
}
.advantages .container {
  padding-bottom: 0;
}
.advantages .list {
  margin: inherit;
  display: flex;
  justify-content: space-between;
}
.icons-advantages {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--advantages-background-color);
  border-radius: 4px;

  width: 270px;
  height: 120px;
  margin-bottom: 30px;
}
.advantages .item {
  width: 270px;
  height: auto;
}
.advantages-header-list {
  margin-top: 0;
  margin-bottom: 10px;

  font-weight: var(--font-size-bold);
  font-size: 14px;
  line-height: 1.14;
}
.advantages-paragraph {
  margin: 0;

  color: var(--advantages-text-color);

  font-weight: var(--font-size-regular);
  line-height: 1.7;
}
/* examples section */
.examples.section {
  padding-top: 0;
}
.examples-header {
  margin-top: 0;
  margin-bottom: 50px;

  font-size: 36px;
  font-weight: var(--font-size-bold);
  text-align: center;
  line-height: 1.16;
}
.examples .list {
  display: flex;
  justify-content: space-between;
}

.examples-img {
  display: block;
}
.item-examples {
  position: relative;
}
.examples-overlay {
  display: block;
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 70px;
  font-size: 16px;
  text-align: center;
  padding-top: 27px;
  padding-bottom: 27px;
  color: var(--main-color);
  background-color: rgba(47, 48, 58, 0.8);
  text-decoration: none;
  text-transform: uppercase;
}
/* team members section */
.team {
  background-color: var(--team-background-color);
}
.team .list {
  display: flex;
  justify-content: space-between;
}
.team-list {
  background-color: var(--main-color);
  text-align: center;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;

  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
    0px 2px 1px rgba(0, 0, 0, 0.2);
}
.team-member-card {
  padding-top: 30px;
  padding-bottom: 30px;
}
.team-member-img {
  display: block;
}
.team-header {
  margin-top: 0;
  margin-bottom: 50px;

  font-size: 36px;
  font-weight: var(--font-size-bold);
  text-align: center;
  line-height: 1.16;
}
.team-list-header {
  margin-top: 0;
  margin-bottom: 10px;

  font-weight: 500;
  font-size: 16px;
  font-weight: var(--font-size-medium);
  line-height: 1.19;
}
.team-list-paragraph {
  margin-bottom: 16px;

  color: var(--list-members-text-color);

  font-size: 16px;
  font-weight: var(--font-size-regular);
  line-height: 1.19;
}
/* social buttons */
.icon-social-list {
  display: flex;
  justify-content: center;
}
.icons-social {
  display: block;
}
.icons-social:not(:last-child) {
  margin-right: 10px;
}
.team-member-card .icon-social {
  fill: var(--icons-main);
  background-color: var(--main-color);
}
.icon-social {
  border-style: none;
  width: 44px;
  height: 44px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  transition-property: background-color, fill;
  transition-duration: var(--transition-duration);
  transition-timing-function: var(--cubic-bezier);
}
.icon-social:hover,
.icon-social:focus,
.social-icons-footer .icon-social:hover,
.social-icons-footer .icon-social:focus {
  fill: var(--main-color);
  background-color: var(--buttons-color);
  /* transition-property: background-color, fill;
  transition-duration: var(--transition-duration);
  transition-timing-function: var(--cubic-bezier); */
}
/* Clients Section */
.clients {
}
.clients-header {
  display: block;
  margin-top: inherit;
  margin-bottom: 50px;

  font-size: 36px;
  font-weight: var(--font-size-bold);
  text-align: center;
  letter-spacing: 0.03em;
  line-height: 1.166;
  text-transform: uppercase;
}
.clients-list {
  display: flex;
}
.client {
  display: block;
}
.clients-list .client-link {
  display: flex;
  width: 170px;
  height: 92px;
  justify-content: center;
  align-items: center;
  border-style: solid;
  border-color: var(--icons-main);
  border-width: 1px;
  border-radius: 4px;
  fill: var(--icons-main);
  transition-property: fill, border-color;
  transition-duration: var(--transition-duration);
  transition-timing-function: var(--cubic-bezier);
}
.clients-list .client-link:hover,
.clients-list .client-link:focus {
  fill: var(--icons-hover);
  border-color: var(--icons-hover);
  /* transition-property: fill, border-color;
  transition-duration: var(--transition-duration);
  transition-timing-function: var(--cubic-bezier); */
}

.clients-list .client:not(:last-child) {
  margin-right: 20px;
}
/* footer section */
.footer {
  background-color: var(--footer-background-color);
  padding-top: 60px;
  padding-bottom: 60px;
}
.footer > .container {
  display: flex;
}
/* ... */

